# dlkit

./: .gitignore  README.md  makefile  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_cython_wheel.yml  build_release_wheel.yml  ci.yml
dlkit/: __init__.py  checks.py  exceptions.py  inference.py  train.py  utils.py
dlkit/data/: __init__.py  data_source.py  data_utils.py
dlkit/models/: __init__.py  bases.py  gpt.py  lstm.py
dlkit/preprocessing/: __init__.py  bases.py  cs_standard.py  standard.py
tests/: conftest.py  test_data_source.py  test_full_pipeline.py  test_infer_arguments.py  test_models.py  test_normalizers.py  test_slots_generation.py  test_train_arguments.py
