[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dlkit"
version = "2024.07.18"
description = "Simple Deep Learning Toolkit"
authors = [ "p3i0t <p3i0t@gmail.com>",]
readme = "README.md"

[tool.ruff]
exclude = [ "dist", ".git",]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.1.0"
numpy = "^1.26.4"
torch = "^2.3.1"
loguru = "^0.7.2"
pydantic = "^2.6.0"
typing-extensions = "^4.9.0"
einops = "^0.7.0"
wheel = "^0.43.0"
cython = "^3.0.10"

[tool.ruff.lint]
ignore = [ "E501",]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
nox = "^2023.4.22"

[tool.poetry.group.build.dependencies]

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
poetry-dynamic-versioning = "^1.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "(?P<base>\\d+\\.\\d+\\.\\d+)"
